[package]
name = "inturn"
version = "0.1.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
description = "Efficient, performant, thread-safe bytes/string interning"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
categories = ["caching"]
keywords = ["symbol", "interning", "string-interning", "hash", "cache"]
documentation = "https://docs.rs/inturn"
homepage = "https://github.com/danipopes/inturn"
repository = "https://github.com/danipopes/inturn"
exclude = [".github/", "benches/", "fuzz/", "tests/"]

[dependencies]
bumpalo = { version = "3", default-features = false }
dashmap = { version = "7.0.0-rc2", default-features = false, features = [
    "raw-api",
    "inline-more",
] }
hashbrown = { version = "0.15", default-features = false }
thread_local = "1.1.8"

[profile.release]
lto = "thin"
panic = "abort"
